# polynomial

./: CMakeLists.txt
gtest/: CMakeLists.txt
include/: Monom.h  Polynomial.h  TList.h
samples/: CMakeLists.txt  pol.cpp
src/: CMakeLists.txt  Monom.cpp
test/: CMakeLists.txt  test.cpp
